--- a/index.html
+++ b/index.html
@@ -54,10 +54,13 @@ Postdoc Research Fellow <br />
 <li><p>[January 2025] I will give a presenation in <a href="https://ims.nus.edu.sg/events/ims_forummath2025_am/" target=&ldquo;blank&rdquo;><b>IMS Young Mathematical Scientists Forum</b></a> at National University of Singapore! 
 </p>
 </li>
+<li><p>[December 2024] I will serve as an <b>area chair</b> of <a href="https://cpal.cc/" target=&ldquo;blank&rdquo;><b>CAPL 2025</b></a>!
+</p>
+</li>
 <li><p>[October 2024] I will chair a session and give a lecture presentation on diffusion models in <a href="https://cmsworkshops.com/Asilomar2024/view_paper.php?PaperNum=1469" target=&ldquo;blank&rdquo;><b>Asilomar 2024</b></a> at Pacific Grove, CA!
 </p>
 </li>
-<li><p>[October 2024] <b>Two paper</b> on diffusion models get accepted by <b>NeurIPS Workshop on Mathematics of Modern Machine Learning</b>! 
+<li><p>[October 2024] <b>Two paper</b> on diffusion models get accepted by <a href="https://sites.google.com/view/m3l-2024/home?authuser=0" target=&ldquo;blank&rdquo;><b>NeurIPS Workshop on Mathematics of Modern Machine Learning</b></a>! 
 </p>
 </li>
 <li><p>[September 2024] I will give a talk on diffusion models in <a href="https://ece.engin.umich.edu/event/tbd-24" target=&ldquo;blank&rdquo;><b>ECE Communications and Signal Processing Seminars</b></a> at the University of Michigan! 
@@ -139,13 +142,13 @@ Postdoc Research Fellow <br />
 Diffusion Models. <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.05264.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
 </p>
 </li>
-<li><p>Can Yaras*, <b>Peng Wang</b>*, Wei Hu, Zhihui Zhu, Laura Balzano, Qing Qu. Invariant Low-Dimensional Subspaces in Gradient Descent for Learning Deep Matrix Factorizations. <b><i>NeurIPS M3L 2023</i></b>. [<a href="https://openreview.net/pdf?id=4pPnQqUMLS" target=&ldquo;blank&rdquo;><b>paper</b></a>]
+<li><p>Can Yaras*, <b>Peng Wang</b>*, Wei Hu, Zhihui Zhu, Laura Balzano, Qing Qu. Invariant Low-Dimensional Subspaces in Gradient Descent for Learning Deep Matrix Factorizations. <b><i>NeurIPS M3L Workshop 2023</i></b>. [<a href="https://openreview.net/pdf?id=4pPnQqUMLS" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
 <li><p>Jinxin Wang, Yuen-Man Pun, Xiaolu Wang, <b>Peng Wang</b>, Anthony Man-Cho So. Projected Tensor Power Method for Hypergraph Community Recovery. <b><i>ICML 2023</i></b>.  [<a href="https://openreview.net/pdf?id=CcDKqUR546" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
-<li><p><b>Peng Wang</b>*, Huikang Liu*, Can Yaras*, Laura Balzano, Qing Qu. Linear Convergence Analysis of Neural Collapse with Unconstrained Features. NeurIPS Workshop on Optimization for Machine Learning, <b><i>NeurIPS OPT 2022</i></b>. [<a href="https://openreview.net/pdf?id=WC9im-M_y5" target=&ldquo;blank&rdquo;><b>paper</b></a>]
+<li><p><b>Peng Wang</b>*, Huikang Liu*, Can Yaras*, Laura Balzano, Qing Qu. Linear Convergence Analysis of Neural Collapse with Unconstrained Features. NeurIPS Workshop on Optimization for Machine Learning, <b><i>NeurIPS OPT Workshop 2022</i></b>. [<a href="https://openreview.net/pdf?id=WC9im-M_y5" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
 <li><p>Can Yaras*, <b>Peng Wang</b>*, Zhihui Zhu, Laura Balzano, Qing Qu. Neural Collapse with Normalized Features: A Geometric Analysis over the Riemannian Manifold. <b><i>NeurIPS 2022</i></b>. [<a href="https://arxiv.org/pdf/2209.09211.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>]
@@ -172,7 +175,7 @@ Diffusion Models. <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-11-02 10:02:55 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-12-01 14:23:29 Eastern Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
