--- a/index.html
+++ b/index.html
@@ -51,7 +51,13 @@ Postdoc Research Fellow <br />
 </p>
 <h2>What's New</h2>
 <ul>
+<li><p>[January 2025] I will give a presentaion in <a href="https://sites.google.com/view/minds-seminar/home" target=&ldquo;blank&rdquo;><b>1W-MINDS Seminar</b></a> online at 5PM (Beijing Time) on Jan 9, 2025! 
+</p>
+</li>
 <li><p>[January 2025] I will give a presenation in <a href="https://ims.nus.edu.sg/events/ims_forummath2025_am/" target=&ldquo;blank&rdquo;><b>IMS Young Mathematical Scientists Forum</b></a> at National University of Singapore! 
+</p>
+</li>
+<li><p>[December 2024] <a href="https://arxiv.org/pdf/2412.07909" target=&ldquo;blank&rdquo;><b>One paper</b></a> on understanding modality gap in multimodal learning is posted! 
 </p>
 </li>
 <li><p>[December 2024] I will serve as an <b>area chair</b> of <a href="https://cpal.cc/" target=&ldquo;blank&rdquo;><b>CAPL 2025</b></a>!
@@ -76,9 +82,7 @@ Postdoc Research Fellow <br />
 </p>
 </li>
 <li><p>[March 2024] <a href="https://arxiv.org/pdf/2310.05264.pdf" target=&ldquo;blank&rdquo;><b>One paper</b></a> on studying <b>reproducibility of diffusion model in memorization and generalization regimes</b> is posted. 
-</p>
-</li>
-<li><p>[November 2023] <a href="https://arxiv.org/pdf/2311.02960.pdf" target=&ldquo;blank&rdquo;><b>One paper</b></a> on understanding <b>hierarchical representation learning</b> via low-dimensinoal modeling is posted!  
+
 
 
 
@@ -175,7 +179,7 @@ Diffusion Models. <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-12-01 14:23:29 Eastern Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-01-07 11:42:14 Malay Peninsula Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
