--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@ Postdoc Research Fellow <br />
 </p>
 <h2>What's New</h2>
 <ul>
+<li><p>[January 2025] <a href="https://arxiv.org/pdf/2301.00423v4" target=&ldquo;blank&rdquo;><b>One paper</b></a> is accepted by <b>INFORMS Journal on Computing</b>! 
+</p>
+</li>
+<li><p>[January 2025] <a href="https://arxiv.org/pdf/2501.02364" target=&ldquo;blank&rdquo;><b>One paper</b></a> on the separation capabilities of shallow nonlinear networks is posted! 
+</p>
+</li>
 <li><p>[January 2025] I will give a presentaion in <a href="https://sites.google.com/view/minds-seminar/home" target=&ldquo;blank&rdquo;><b>1W-MINDS Seminar</b></a> online at 5PM (Beijing Time) on Jan 9, 2025! 
 </p>
 </li>
@@ -96,6 +102,9 @@ Postdoc Research Fellow <br />
 </ul>
 <h2>Preprints (&lsquo;&lsquo;*&rsquo;&rsquo; denotes equal contribution, &lsquo;&lsquo;\(\dagger\)&rsquo;&rsquo; denotes corresponding author.)</h2>
 <ul>
+<li><p>Alec S Xu, Can Yaras, Peng Wang, Qing Qu. Understanding How Nonlinear Layers Create Linearly Separable Features for Low-Dimensional Data, 2025. [https:<i></i>arxiv.org<i>pdf</i>2501.02364, <b>paper</b>]
+</p>
+</li>
 <li><p><b>Peng Wang</b>*, Huijie Zhang*, Zekai Zhang, Siyi Chen, Yi Ma, Qing Qu. Diffusion Models Learn Low-Dimensional Distributions via Subspace Clustering, 2024. Under review in <b>ICLR 2024</b>. [<a href="https://arxiv.org/pdf/2409.02426" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
 </p>
 <ul>
@@ -104,9 +113,6 @@ Postdoc Research Fellow <br />
 </li></ul>
 </li>
 <li><p><b>Peng Wang</b>*, Xiao Li*, Can Yaras, Wei Hu, Zhihui Zhu, Laura Balzano, Wei Hu, Qing Qu. Understanding Deep Representation Learning via Layerwise Feature Compression and Discrimination. Under review in <b><i>Journal of Machine Learning Research</i></b>, 2024. [<a href="https://arxiv.org/pdf/2311.02960.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>]
-</p>
-</li>
-<li><p><b>Peng Wang</b>, Rujun Jiang, Qingyuan Kong, Laura Balzano. A Proximal DC Algorithm for Sample Average Approximation of Chance Constrained Programming. Under <b>minor revision</b> in <b><i>INFORMS Journal on Computing</i></b>, 2024. [<a href="https://arxiv.org/pdf/2301.00423v4" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
 <li><p>Can Yaras*, <b>Peng Wang</b>*, Wei Hu, Zhihui Zhu, Laura Balzano, Qing Qu. The Law of Parsimony in Gradient Descent for Learning Deep Linear Networks, 2023. To be submitted. [<a href="https://arxiv.org/pdf/2306.01154.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>]
@@ -118,6 +124,9 @@ Postdoc Research Fellow <br />
 </ul>
 <h2>Journal Papers </h2>
 <ul>
+<li><p><b>Peng Wang</b>, Rujun Jiang, Qingyuan Kong, Laura Balzano. A Proximal DC Algorithm for Sample Average Approximation of Chance Constrained Programming. Accepted for publication in <b><i>INFORMS Journal on Computing</i></b>, 2025 [<a href="https://arxiv.org/pdf/2301.00423v4" target=&ldquo;blank&rdquo;><b>paper</b></a>]
+</p>
+</li>
 <li><p><b>Peng Wang</b>, Huikang Liu, Anthony Man-Cho So. Linear Convergence of Proximal Alternating Minimization Method with Extrapolation for L1-Norm Principal Component Analysis. <b><i>SIAM Journal on Optimization</i></b> (2023) 33(2):684-712. [<a href="https://arxiv.org/pdf/2107.07107.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
 </p>
 </li>
@@ -179,7 +188,7 @@ Diffusion Models. <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-01-07 11:42:14 Malay Peninsula Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-01-21 08:43:11 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
