--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ Postdoc Research Fellow <br />
 </ul>
 <h2>Preprints (&lsquo;&lsquo;*&rsquo;&rsquo; denotes equal contribution, &lsquo;&lsquo;\(\dagger\)&rsquo;&rsquo; denotes corresponding author.)</h2>
 <ul>
-<li><p>Alec S Xu, Can Yaras, Peng Wang, Qing Qu. Understanding How Nonlinear Layers Create Linearly Separable Features for Low-Dimensional Data, 2025. [https:<i></i>arxiv.org<i>pdf</i>2501.02364, <b>paper</b>]
+<li><p>Alec S Xu, Can Yaras, <b>Peng Wang</b>, Qing Qu. Understanding How Nonlinear Layers Create Linearly Separable Features for Low-Dimensional Data, 2025. [https:<i></i>arxiv.org<i>pdf</i>2501.02364, <b>paper</b>]
 </p>
 </li>
 <li><p><b>Peng Wang</b>*, Huijie Zhang*, Zekai Zhang, Siyi Chen, Yi Ma, Qing Qu. Diffusion Models Learn Low-Dimensional Distributions via Subspace Clustering, 2024. Under review in <b>ICLR 2024</b>. [<a href="https://arxiv.org/pdf/2409.02426" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
@@ -188,7 +188,7 @@ Diffusion Models. <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-01-21 08:43:11 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-01-21 08:45:38 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
