--- a/index.html
+++ b/index.html
@@ -142,6 +142,9 @@ Postdoc Research Fellow <br />
 </ul>
 <h2>Conference Papers </h2>
 <ul>
+<li><p>Can Yaras, Siyi Chen, Peng Wang, Qing Qu. Explaining and Mitigating the Modality Gap in Contrastive Multimodal Learning. Accepted by <b><i>CAPL 2025</i></b>. [<a href="https://arxiv.org/pdf/2412.07909" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
+</p>
+</li>
 <li><p>Siyi Chen*, Huijie Zhang*, Minzhe Guo, Yifu Lu, <b>Peng Wang</b>, Qing Qu. Exploring Low-Dimensional Subspaces in Diffusion Models for Controllable Image Editing. <b><i>NeurIPS 2024</i></b>. [<a href="https://arxiv.org/pdf/2409.02374" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
 </p>
 </li>
@@ -194,7 +197,7 @@ Diffusion Models. <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-02-11 15:17:33 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-02-12 09:57:37 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
