--- a/index.html
+++ b/index.html
@@ -51,40 +51,41 @@ Postdoc Research Fellow <br />
 </p>
 <h2>What's New</h2>
 <ul>
-<li><p>[January 2025] <a href="https://arxiv.org/pdf/2502.05743" target=&ldquo;blank&rdquo;><b>One paper</b></a> on the representation capabilities of diffusion models is posted! 
+<li><p>[Feb 2025] <a href="https://arxiv.org/abs/2502.11152" target=&ldquo;blank&rdquo;><b>One paper</b></a> on the local loss landscape of deep linear networks is posted! 
 </p>
 </li>
-<li><p>[January 2025] <a href="https://arxiv.org/pdf/2301.00423v4" target=&ldquo;blank&rdquo;><b>One paper</b></a> is accepted by <b>INFORMS Journal on Computing</b>! 
+<li><p>[Jan 2025] <a href="https://arxiv.org/pdf/2502.05743" target=&ldquo;blank&rdquo;><b>One paper</b></a> on the representation capabilities of diffusion models is posted! 
 </p>
 </li>
-<li><p>[January 2025] <a href="https://arxiv.org/pdf/2501.02364" target=&ldquo;blank&rdquo;><b>One paper</b></a> on the separation capabilities of shallow nonlinear networks is posted! 
+<li><p>[Jan 2025] <a href="https://arxiv.org/pdf/2301.00423v4" target=&ldquo;blank&rdquo;><b>One paper</b></a> is accepted by <b>INFORMS Journal on Computing</b>! 
 </p>
 </li>
-<li><p>[January 2025] I will give a presentaion in <a href="https://sites.google.com/view/minds-seminar/home" target=&ldquo;blank&rdquo;><b>1W-MINDS Seminar</b></a> online at 5PM (Beijing Time) on Jan 9, 2025! 
+<li><p>[Jan 2025] <a href="https://arxiv.org/pdf/2501.02364" target=&ldquo;blank&rdquo;><b>One paper</b></a> on the separation capabilities of shallow nonlinear networks is posted! 
 </p>
 </li>
-<li><p>[January 2025] I will give a presenation in <a href="https://ims.nus.edu.sg/events/ims_forummath2025_am/" target=&ldquo;blank&rdquo;><b>IMS Young Mathematical Scientists Forum</b></a> at National University of Singapore! 
+<li><p>[Jan 2025] I will give a presentaion in <a href="https://sites.google.com/view/minds-seminar/home" target=&ldquo;blank&rdquo;><b>1W-MINDS Seminar</b></a> online at 5PM (Beijing Time) on Jan 9, 2025! 
 </p>
 </li>
-<li><p>[December 2024] <a href="https://arxiv.org/pdf/2412.07909" target=&ldquo;blank&rdquo;><b>One paper</b></a> on understanding modality gap in multimodal learning is posted! 
+<li><p>[Jan 2025] I will give a presenation in <a href="https://ims.nus.edu.sg/events/ims_forummath2025_am/" target=&ldquo;blank&rdquo;><b>IMS Young Mathematical Scientists Forum</b></a> at National University of Singapore! 
 </p>
 </li>
-<li><p>[December 2024] I will serve as an <b>area chair</b> of <a href="https://cpal.cc/" target=&ldquo;blank&rdquo;><b>CAPL 2025</b></a>!
+<li><p>[Dec 2024] <a href="https://arxiv.org/pdf/2412.07909" target=&ldquo;blank&rdquo;><b>One paper</b></a> on understanding modality gap in multimodal learning is posted! 
 </p>
 </li>
-<li><p>[October 2024] I will chair a session and give a lecture presentation on diffusion models in <a href="https://cmsworkshops.com/Asilomar2024/view_paper.php?PaperNum=1469" target=&ldquo;blank&rdquo;><b>Asilomar 2024</b></a> at Pacific Grove, CA!
+<li><p>[Dec 2024] I will serve as an <b>area chair</b> of <a href="https://cpal.cc/" target=&ldquo;blank&rdquo;><b>CAPL 2025</b></a>!
 </p>
 </li>
-<li><p>[October 2024] <b>Two paper</b> on diffusion models get accepted by <a href="https://sites.google.com/view/m3l-2024/home?authuser=0" target=&ldquo;blank&rdquo;><b>NeurIPS Workshop on Mathematics of Modern Machine Learning</b></a>! 
+<li><p>[Oct 2024] I will chair a session and give a lecture presentation on diffusion models in <a href="https://cmsworkshops.com/Asilomar2024/view_paper.php?PaperNum=1469" target=&ldquo;blank&rdquo;><b>Asilomar 2024</b></a> at Pacific Grove, CA!
 </p>
 </li>
-<li><p>[September 2024] I will give a talk on diffusion models in <a href="https://ece.engin.umich.edu/event/tbd-24" target=&ldquo;blank&rdquo;><b>ECE Communications and Signal Processing Seminars</b></a> at the University of Michigan! 
+<li><p>[Oct 2024] <b>Two paper</b> on diffusion models get accepted by <a href="https://sites.google.com/view/m3l-2024/home?authuser=0" target=&ldquo;blank&rdquo;><b>NeurIPS Workshop on Mathematics of Modern Machine Learning</b></a>! 
 </p>
 </li>
-<li><p>[September 2024] <a href="https://arxiv.org/pdf/2409.02374" target=&ldquo;blank&rdquo;><b>One paper</b></a> on dffisuion models is accepted by <b>NeurIPS 2024</b>! 
+<li><p>[Sep 2024] I will give a talk on diffusion models in <a href="https://ece.engin.umich.edu/event/tbd-24" target=&ldquo;blank&rdquo;><b>ECE Communications and Signal Processing Seminars</b></a> at the University of Michigan! 
 </p>
 </li>
-<li><p>[September 2024] <b>Two papers</b> [<a href="https://arxiv.org/pdf/2409.02426" target=&ldquo;blank&rdquo;><b>paper 1</b></a>, <a href="[https://arxiv.org/pdf/2409.02374" target=&ldquo;blank&rdquo;><b>paper 2</b></a>] on diffusion models are released! 
+<li><p>[Sep 2024] <a href="https://arxiv.org/pdf/2409.02374" target=&ldquo;blank&rdquo;><b>One paper</b></a> on dffisuion models is accepted by <b>NeurIPS 2024</b>! 
+
 </p>
 </li>
 <li><p>[May 2024] <b>Five papers</b> [<a href="https://arxiv.org/pdf/2406.01909" target=&ldquo;blank&rdquo;><b>paper1</b></a>, <a href="http://arxiv.org/abs/2406.04112" target=&ldquo;blank&rdquo;><b>paper2</b></a>, <a href="https://arxiv.org/pdf/2310.05264.pdf" target=&ldquo;blank&rdquo;><b>paper3</b></a>, <a href="https://arxiv.org/pdf/2310.05351.pdf" target=&ldquo;blank&rdquo;><b>paper4</b></a>, <a href="https://arxiv.org/pdf/2406.05822" target=&ldquo;blank&rdquo;><b>paper5</b></a>]  are accepted by <b>ICML 2024</b>! 
@@ -105,6 +106,9 @@ Postdoc Research Fellow <br />
 </ul>
 <h2>Preprints (&lsquo;&lsquo;*&rsquo;&rsquo; denotes equal contribution, &lsquo;&lsquo;\(\dagger\)&rsquo;&rsquo; denotes corresponding author.)</h2>
 <ul>
+<li><p>Po Chen, Rujun Jiang, <b>Peng Wang</b>\(^\dagger\) (<font color=red size=+0.5><b>\(\alpha\)-\(\beta\) order</b></font>). Error Bound Analysis for the Regularized Loss of Deep Linear Neural Networks, 2025. [<a href="https://arxiv.org/pdf/2502.11152" target=&ldquo;blank&rdquo;><b>paper</b></a>]
+</p>
+</li>
 <li><p>Xiao Li*, Zekai Zhang*, Xiang Li, Siyi Chen, Zhihui Zhu, <b>Peng Wang</b>, Qing Qu. Understanding Representation Dynamics of Diffusion Models via Low-Dimensional Modeling, 2025. [<a href="https://arxiv.org/pdf/2502.05743" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
 </p>
 </li>
@@ -130,7 +134,7 @@ Postdoc Research Fellow <br />
 </ul>
 <h2>Journal Papers </h2>
 <ul>
-<li><p><b>Peng Wang</b>, Rujun Jiang, Qingyuan Kong, Laura Balzano. A Proximal DC Algorithm for Sample Average Approximation of Chance Constrained Programming. Accepted for publication in <b><i>INFORMS Journal on Computing</i></b>, 2025. [<a href="https://arxiv.org/pdf/2301.00423v4" target=&ldquo;blank&rdquo;><b>paper</b></a>]
+<li><p><b>Peng Wang</b>, Rujun Jiang, Qingyuan Kong, Laura Balzano. A Proximal DC Algorithm for Sample Average Approximation of Chance Constrained Programming. Accepted for publication in <b><i>INFORMS Journal on Computing</i></b>, 2025. [<a href="https://arxiv.org/pdf/2301.00423v4" target=&ldquo;blank&rdquo;><b>paper</b></a>, <a href="https://github.com/peng8wang/2024.0648" target=&ldquo;blank&rdquo;><b>code</b></a>]
 </p>
 </li>
 <li><p><b>Peng Wang</b>, Huikang Liu, Anthony Man-Cho So. Linear Convergence of Proximal Alternating Minimization Method with Extrapolation for L1-Norm Principal Component Analysis. <b><i>SIAM Journal on Optimization</i></b> (2023) 33(2):684-712. [<a href="https://arxiv.org/pdf/2107.07107.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
@@ -197,7 +201,7 @@ Diffusion Models. <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-02-12 09:57:37 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-02-18 10:36:39 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
