--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@ Postdoc Research Fellow <br />
 <li><p>Alec S Xu, Can Yaras, <b>Peng Wang</b>, Qing Qu. Understanding How Nonlinear Layers Create Linearly Separable Features for Low-Dimensional Data, 2025. [<a href="https://arxiv.org/pdf/2501.02364" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
-<li><p><b>Peng Wang</b>*, Huijie Zhang*, Zekai Zhang, Siyi Chen, Yi Ma, Qing Qu. Diffusion Models Learn Low-Dimensional Distributions via Subspace Clustering, 2024. Under review in <b>ICLR 2024</b>. [<a href="https://arxiv.org/pdf/2409.02426" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
+<li><p><b>Peng Wang</b>*, Huijie Zhang*, Zekai Zhang, Siyi Chen, Yi Ma, Qing Qu. Diffusion Models Learn Low-Dimensional Distributions via Subspace Clustering, 2024. Under review in <b>ICML 2025</b>. [<a href="https://arxiv.org/pdf/2409.02426" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
 </p>
 <ul>
-<li><p>Accepted by <b>NeurIPS M3L Workshop</b>.
+<li><p>Accepted by <b>NeurIPS 2024 M3L Workshop</b> &amp; <b>ICLR 2025 DeLTa Workshop</b>.
 </p>
 </li></ul>
 </li>
@@ -201,7 +201,7 @@ Diffusion Models. <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-02-18 10:36:39 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-03-09 21:01:44 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
