--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ Postdoc Research Fellow <br />
 </ul>
 <h2>Preprints (&lsquo;&lsquo;*&rsquo;&rsquo; denotes equal contribution, &lsquo;&lsquo;\(\dagger\)&rsquo;&rsquo; denotes corresponding author.)</h2>
 <ul>
-<li><p>Po Chen, Rujun Jiang, <b>Peng Wang</b>\(^\dagger\) (<font color=red size=+0.5><b>\(\alpha\)-\(\beta\) order</b></font>). Error Bound Analysis for the Regularized Loss of Deep Linear Neural Networks, 2025. [<a href="https://arxiv.org/pdf/2502.11152" target=&ldquo;blank&rdquo;><b>paper</b></a>]
+<li><p>Po Chen, Rujun Jiang, <b>Peng Wang</b>\(^\dagger\) (<font color=red size=+0.5><b>\(\alpha\)-\(\beta\) order</b></font>). Error Bound Analysis for the Regularized Loss of Deep Linear Neural Networks, 2025. Under review in <b>Foundations of Computational Mathematics</b>. [<a href="https://arxiv.org/pdf/2502.11152" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
 <li><p>Xiao Li*, Zekai Zhang*, Xiang Li, Siyi Chen, Zhihui Zhu, <b>Peng Wang</b>, Qing Qu. Understanding Representation Dynamics of Diffusion Models via Low-Dimensional Modeling, 2025. [<a href="https://arxiv.org/pdf/2502.05743" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
@@ -201,7 +201,7 @@ Diffusion Models. <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-03-09 21:01:44 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-03-18 23:31:51 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
