--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@ Postdoc Research Fellow <br />
 </p>
 <h2>What's New</h2>
 <ul>
+<li><p>[Mar 2025] I will attend the <a href="https://cpal.cc/" target=&ldquo;blank&rdquo;><b>Conference on Parsimony and Learning</b></a> at Stanford University from March 24-26! 
+</p>
+</li>
 <li><p>[Feb 2025] <a href="https://arxiv.org/abs/2502.11152" target=&ldquo;blank&rdquo;><b>One paper</b></a> on the local loss landscape of deep linear networks is posted! 
 </p>
 </li>
@@ -89,9 +92,7 @@ Postdoc Research Fellow <br />
 </p>
 </li>
 <li><p>[May 2024] <b>Five papers</b> [<a href="https://arxiv.org/pdf/2406.01909" target=&ldquo;blank&rdquo;><b>paper1</b></a>, <a href="http://arxiv.org/abs/2406.04112" target=&ldquo;blank&rdquo;><b>paper2</b></a>, <a href="https://arxiv.org/pdf/2310.05264.pdf" target=&ldquo;blank&rdquo;><b>paper3</b></a>, <a href="https://arxiv.org/pdf/2310.05351.pdf" target=&ldquo;blank&rdquo;><b>paper4</b></a>, <a href="https://arxiv.org/pdf/2406.05822" target=&ldquo;blank&rdquo;><b>paper5</b></a>]  are accepted by <b>ICML 2024</b>! 
-</p>
-</li>
-<li><p>[March 2024] <a href="https://arxiv.org/pdf/2310.05264.pdf" target=&ldquo;blank&rdquo;><b>One paper</b></a> on studying <b>reproducibility of diffusion model in memorization and generalization regimes</b> is posted. 
+
 
 
 
@@ -201,7 +202,7 @@ Diffusion Models. <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-03-19 13:33:41 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-03-19 13:52:53 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
