--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ Postdoc Research Fellow <br />
 </ul>
 <h2>Preprints (&lsquo;&lsquo;*&rsquo;&rsquo; denotes equal contribution, &lsquo;&lsquo;\(\dagger\)&rsquo;&rsquo; denotes corresponding author.)</h2>
 <ul>
-<li><p>Po Chen, Rujun Jiang, <b>Peng Wang</b>\(^\dagger\) (<font color=red size=+0.5><b>\(\alpha\)-\(\beta\) order</b></font>). Error Bound Analysis for the Regularized Loss of Deep Linear Neural Networks, 2025. Under review in <b>Foundations of Computational Mathematics</b>. [<a href="https://arxiv.org/pdf/2502.11152" target=&ldquo;blank&rdquo;><b>paper</b></a>]
+<li><p>Po Chen, Rujun Jiang, <b>Peng Wang</b>\(^\dagger\) (<font color=red size=+0.5><b>\(\alpha\)-\(\beta\) order</b></font>). Error Bound Analysis for the Regularized Loss of Deep Linear Neural Networks, 2025. [<a href="https://arxiv.org/pdf/2502.11152" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
 <li><p><b>Peng Wang</b>*, Xiao Li*, Can Yaras, Wei Hu, Zhihui Zhu, Laura Balzano, Wei Hu, Qing Qu. Understanding Deep Representation Learning via Layerwise Feature Compression and Discrimination. <b>Minor revision</b> in <b><i>Journal of Machine Learning Research</i></b>, 2024. [<a href="https://arxiv.org/pdf/2311.02960.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>]
@@ -202,7 +202,7 @@ Diffusion Models. <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-03-19 19:17:30 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-03-23 09:18:57 Pacific Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
