--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Postdoc Research Fellow <br />
 </p>
 <h2>What's New</h2>
 <ul>
-<li><p>[Mar 2025] I will attend the <a href="https://cpal.cc/" target=&ldquo;blank&rdquo;><b>Conference on Parsimony and Learning</b></a> at Stanford University from March 24-26! 
+<li><p>[Mar 2025] I will attend the <a href="https://cpal.cc/" target=&ldquo;blank&rdquo;><b>Conference on Parsimony and Learning</b></a> at Stanford University from March 24-27! 
 </p>
 </li>
 <li><p>[Feb 2025] <a href="https://arxiv.org/abs/2502.11152" target=&ldquo;blank&rdquo;><b>One paper</b></a> on the local loss landscape of deep linear networks is posted! 
@@ -147,7 +147,7 @@ Postdoc Research Fellow <br />
 </ul>
 <h2>Conference Papers </h2>
 <ul>
-<li><p>Can Yaras, Siyi Chen, Peng Wang, Qing Qu. Explaining and Mitigating the Modality Gap in Contrastive Multimodal Learning. Accepted by <b><i>CAPL 2025</i></b>. [<a href="https://arxiv.org/pdf/2412.07909" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
+<li><p>Can Yaras*, Siyi Chen*, Peng Wang, Qing Qu. Explaining and Mitigating the Modality Gap in Contrastive Multimodal Learning. Accepted by <b><i>CAPL 2025</i></b>. [<a href="https://arxiv.org/pdf/2412.07909" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
 </p>
 </li>
 <li><p>Siyi Chen*, Huijie Zhang*, Minzhe Guo, Yifu Lu, <b>Peng Wang</b>, Qing Qu. Exploring Low-Dimensional Subspaces in Diffusion Models for Controllable Image Editing. <b><i>NeurIPS 2024</i></b>. [<a href="https://arxiv.org/pdf/2409.02374" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
@@ -202,7 +202,7 @@ Diffusion Models. <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-03-23 09:18:57 Pacific Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-03-24 10:49:41 Pacific Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
