--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@ Postdoc Research Fellow <br />
 </p>
 <h2>What's New</h2>
 <ul>
+<li><p>[Mar 2025] <a href="https://arxiv.org/pdf/2503.19859" target=&ldquo;blank&rdquo;><b>A tutorial paper</b></a> on understanding the role of low-rank structures in the training and adaptation of deep learning models is posted! 
+</p>
+</li>
 <li><p>[Mar 2025] I will attend the <a href="https://cpal.cc/" target=&ldquo;blank&rdquo;><b>Conference on Parsimony and Learning</b></a> at Stanford University from March 24-27! 
 </p>
 </li>
@@ -107,6 +110,9 @@ Postdoc Research Fellow <br />
 </ul>
 <h2>Preprints (&lsquo;&lsquo;*&rsquo;&rsquo; denotes equal contribution, &lsquo;&lsquo;\(\dagger\)&rsquo;&rsquo; denotes corresponding author.)</h2>
 <ul>
+<li><p>Laura Balzano\(^\dagger\), Tianjiao Ding\(^\dagger\), Benjamin D. Haeffele, Soo Min Kwon, Qing Qu, <b>Peng Wang</b>\(^\dagger\), Zhangyang Wang, Can Yaras. An Overview of Low-Rank Structures in the Training and Adaptation of Large Models. (<font color=red size=+0.5><b>\(\alpha\)-\(\beta\) order</b></font>). Under review in <b><i>IEEE Signal Processing Magazine</i></b>, 2025. [<a href="https://arxiv.org/pdf/2503.19859" target=&ldquo;blank&rdquo;><b>paper</b></a>]
+</p>
+</li>
 <li><p>Po Chen, Rujun Jiang, <b>Peng Wang</b>\(^\dagger\) (<font color=red size=+0.5><b>\(\alpha\)-\(\beta\) order</b></font>). Error Bound Analysis for the Regularized Loss of Deep Linear Neural Networks, 2025. [<a href="https://arxiv.org/pdf/2502.11152" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
@@ -202,7 +208,7 @@ Diffusion Models. <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-03-24 10:49:41 Pacific Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-03-25 22:00:56 Pacific Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
