--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Postdoc Research Fellow <br />
 <a href="https://eecs.engin.umich.edu/" target=&ldquo;blank&rdquo;><b>Department of Electrical Engineering and Computer Science</b></a> <br /> 
 <a href="https://umich.edu/" target=&ldquo;blank&rdquo;><b>University of Michigan, Ann Arbor</b></a> <br />
 <b>Email</b>: pengwa@umich.edu <br />
-<a href="https://scholar.google.com/citations?user=baF3HKUAAAAJ&amp;hl=zh-TW" target=&ldquo;blank&rdquo;><b>Google Scholar</b></a>
+<a href="https://scholar.google.com/citations?user=baF3HKUAAAAJ&amp;hl=zh-TW" target=&ldquo;blank&rdquo;><b>Google Scholar</b></a>, <a href="https://orcid.org/0000-0002-6799-0745" target=&ldquo;blank&rdquo;><b>ORCDI</b></a>
 </p>
 </td></tr></table>
 <h2>About Me</h2>
@@ -144,7 +144,7 @@ Postdoc Research Fellow <br />
 </ul>
 <h2>Journal Papers </h2>
 <ul>
-<li><p><b>Peng Wang</b>, Rujun Jiang, Qingyuan Kong, Laura Balzano. A Proximal DC Algorithm for Sample Average Approximation of Chance Constrained Programming. Accepted for publication in <b><i>INFORMS Journal on Computing</i></b>, 2025. [<a href="https://pubsonline.informs.org/doi/abs/10.1287/ijoc.2024.0648" target=&ldquo;blank&rdquo;><b>paper</b></a>, <a href="https://github.com/peng8wang/2024.0648" target=&ldquo;blank&rdquo;><b>code</b></a>] 
+<li><p><b>Peng Wang</b>, Rujun Jiang, Qingyuan Kong, Laura Balzano. A Proximal Difference-of-Convex Algorithm for Sample Average Approximation of Chance Constrained Programming. Accepted for publication in <b><i>INFORMS Journal on Computing</i></b>, 2025. [<a href="https://pubsonline.informs.org/doi/abs/10.1287/ijoc.2024.0648" target=&ldquo;blank&rdquo;><b>paper</b></a>, <a href="https://github.com/peng8wang/2024.0648" target=&ldquo;blank&rdquo;><b>code</b></a>] 
 </p>
 </li>
 <li><p><b>Peng Wang</b>, Huikang Liu, Anthony Man-Cho So. Linear Convergence of Proximal Alternating Minimization Method with Extrapolation for L1-Norm Principal Component Analysis. <b><i>SIAM Journal on Optimization</i></b> (2023) 33(2):684-712. [<a href="https://arxiv.org/pdf/2107.07107.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
@@ -211,7 +211,7 @@ Diffusion Models. <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-04-07 13:05:08 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-04-11 12:58:55 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
