--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@ Postdoc Research Fellow <br />
 </p>
 <h2>What's New</h2>
 <ul>
+<li><p>[Apr 2025] Our recent works on studying the generalization of diffusion models appears on <a href="https://www.siam.org/publications/siam-news/articles/generalization-of-diffusion-models-principles-theory-and-implications/" target=&ldquo;blank&rdquo;><b>SIAM News Blog</b></a>!
+</p>
+</li>
 <li><p>[Mar 2025] <a href="https://arxiv.org/pdf/2503.19859" target=&ldquo;blank&rdquo;><b>A tutorial paper</b></a> on understanding the role of low-rank structures in the training and adaptation of deep learning models is posted! 
 </p>
 </li>
@@ -88,9 +91,7 @@ Postdoc Research Fellow <br />
 </p>
 </li>
 <li><p>[Sep 2024] I will give a talk on diffusion models in <a href="https://ece.engin.umich.edu/event/tbd-24" target=&ldquo;blank&rdquo;><b>ECE Communications and Signal Processing Seminars</b></a> at the University of Michigan! 
-</p>
-</li>
-<li><p>[Sep 2024] <a href="https://arxiv.org/pdf/2409.02374" target=&ldquo;blank&rdquo;><b>One paper</b></a> on dffisuion models is accepted by <b>NeurIPS 2024</b>! 
+
 
 </p>
 </li>
@@ -211,7 +212,7 @@ Diffusion Models. <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-04-11 12:58:55 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-04-14 19:43:16 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
