--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ MathJax.Hub.Config({
 <div class="menu-category">Peng Wang</div>
 <div class="menu-item"><a href="index.html" class="current"><b>Home</b></a></div>
 <div class="menu-item"><a href="activity.html"><b>Activities</b></a></div>
+<div class="menu-item"><a href="teaching.html"><b>Teaching</b></a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -51,6 +52,9 @@ Postdoc Research Fellow <br />
 </p>
 <h2>What's New</h2>
 <ul>
+<li><p>[May 2025] Our paper on understanding the mechenism of transformers has been accepted by <b>ICML 2025</b>! 
+</p>
+</li>
 <li><p>[Apr 2025] Our recent works on studying the generalization of diffusion models appears on <a href="https://www.siam.org/publications/siam-news/articles/generalization-of-diffusion-models-principles-theory-and-implications/" target=&ldquo;blank&rdquo;><b>SIAM News Blog</b></a>!
 </p>
 </li>
@@ -120,9 +124,6 @@ Postdoc Research Fellow <br />
 <li><p><b>Peng Wang</b>*, Xiao Li*, Can Yaras, Wei Hu, Zhihui Zhu, Laura Balzano, Wei Hu, Qing Qu. Understanding Deep Representation Learning via Layerwise Feature Compression and Discrimination. <b>Minor revision</b> in <b><i>Journal of Machine Learning Research</i></b>, 2024. [<a href="https://arxiv.org/pdf/2311.02960.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
-<li><p><b>Peng Wang</b>, Yifu Lu, Yaodong Yu, Druv Pai, Qing Qu, Yi Ma. Attention-Only Transformers via Unrolled Subspace Denoising. Under review in <b>ICML 2025</b>. 
-</p>
-</li>
 <li><p>Xiao Li*, Zekai Zhang*, Xiang Li, Siyi Chen, Zhihui Zhu, <b>Peng Wang</b>, Qing Qu. Understanding Representation Dynamics of Diffusion Models via Low-Dimensional Modeling, 2025. Under review in <b>ICML 2025</b>. [<a href="https://arxiv.org/pdf/2502.05743" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
 </p>
 </li>
@@ -155,9 +156,12 @@ Postdoc Research Fellow <br />
 </p>
 </li>
 </ul>
-<h2>Conference Papers </h2>
+<h2>Conference Papers</h2>
 <ul>
-<li><p>Can Yaras*, Siyi Chen*, Peng Wang, Qing Qu. Explaining and Mitigating the Modality Gap in Contrastive Multimodal Learning. Accepted by <b><i>CAPL 2025</i></b>. [<a href="https://arxiv.org/pdf/2412.07909" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
+<li><p><b>Peng Wang</b>, Yifu Lu, Yaodong Yu, Druv Pai, Qing Qu, Yi Ma. Attention-Only Transformers via Unrolled Subspace Denoising. Accepted by <b><i>ICML 2025</i></b>. 
+</p>
+</li>
+<li><p>Can Yaras*, Siyi Chen*, Peng Wang, Qing Qu. Explaining and Mitigating the Modality Gap in Contrastive Multimodal Learning. <b><i>CAPL 2025</i></b>. [<a href="https://arxiv.org/pdf/2412.07909" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
 </p>
 </li>
 <li><p>Siyi Chen*, Huijie Zhang*, Minzhe Guo, Yifu Lu, <b>Peng Wang</b>, Qing Qu. Exploring Low-Dimensional Subspaces in Diffusion Models for Controllable Image Editing. <b><i>NeurIPS 2024</i></b>. [<a href="https://arxiv.org/pdf/2409.02374" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
@@ -212,7 +216,7 @@ Diffusion Models. <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-04-14 19:43:16 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-05-01 10:07:59 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
