--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Postdoc Research Fellow <br />
 <p>I am currently a postdoc research fellow advised by Professors <a href="https://web.eecs.umich.edu/~girasole/" target=&ldquo;blank&rdquo;><b>Laura Balzano</b></a> and <a href="https://qingqu.engin.umich.edu/" target=&ldquo;blank&rdquo;><b>Qing Qu</b></a> at <a href="https://umich.edu/" target=&ldquo;blank&rdquo;><b>University of Michigan</b></a>. Before that, I got my Ph.D. degree in Systems Engineering and Engineering Management advised by Professor <a href="https://www1.se.cuhk.edu.hk/~manchoso/" target=&ldquo;blank&rdquo;><b>Anthony Man-Cho So</b></a> at <a href="https://www.cuhk.edu.hk/" target=&ldquo;blank&rdquo;><b>The Chinese University of Hong Kong</b></a>.
 </p>
 <h2>Research Interests </h2>
-<p>Broadly speaking, my research interest lies in the intersects of <b>optimization</b>, <b>machine learning</b>, and <b>data science</b>. Currently, I am devoted to understanding <b>mathematical foundations of deep learning models</b>, including supervised learning models, diffusion models, and large language models. I mainly study how low-complexity structures (e.g., low-rankness, sparsity, over-parameterization) in practical problems lead to favorable optimization properties and use them to mitigate the challenges caused by worst-case scenarios, enable efficient optimization, and improve our understanding of learning phenomena.. 
+<p>Broadly speaking, my research interest lies in the intersects of <b>optimization</b>, <b>machine learning</b>, and <b>data science</b>. Currently, I am devoted to understanding <b>mathematical foundations of deep learning models</b>, including supervised learning models, diffusion models, and large language models. I mainly study how low-complexity structures (e.g., low-rankness, sparsity, over-parameterization) in practical problems lead to favorable optimization properties and use them to mitigate the challenges caused by worst-case scenarios, enable efficient optimization, and improve our understanding of learning phenomena. 
 
 
 </p>
@@ -52,7 +52,7 @@ Postdoc Research Fellow <br />
 </p>
 <h2>What's New</h2>
 <ul>
-<li><p>[May 2025] Our paper on understanding the mechenism of transformers has been accepted by <b>ICML 2025</b>! 
+<li><p>[May 2025] <a href="https://arxiv.org/pdf/2506.03790" target=&ldquo;blank&rdquo;><b>Our paper</b></a> on understanding the mechenism of transformers has been accepted by <b>ICML 2025</b>! 
 </p>
 </li>
 <li><p>[Apr 2025] Our recent works on studying the generalization of diffusion models appears on <a href="https://www.siam.org/publications/siam-news/articles/generalization-of-diffusion-models-principles-theory-and-implications/" target=&ldquo;blank&rdquo;><b>SIAM News Blog</b></a>!
@@ -124,7 +124,7 @@ Postdoc Research Fellow <br />
 <li><p><b>Peng Wang</b>*, Xiao Li*, Can Yaras, Wei Hu, Zhihui Zhu, Laura Balzano, Wei Hu, Qing Qu. Understanding Deep Representation Learning via Layerwise Feature Compression and Discrimination. <b>Minor revision</b> in <b><i>Journal of Machine Learning Research</i></b>, 2024. [<a href="https://arxiv.org/pdf/2311.02960.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
-<li><p>Xiao Li*, Zekai Zhang*, Xiang Li, Siyi Chen, Zhihui Zhu, <b>Peng Wang</b>, Qing Qu. Understanding Representation Dynamics of Diffusion Models via Low-Dimensional Modeling, 2025. Under review in <b>NeurIPS 2025</b>. [<a href="https://arxiv.org/pdf/2502.05743" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
+<li><p>Xiao Li*, Zekai Zhang*, Xiang Li, Siyi Chen, Zhihui Zhu, <b>Peng Wang</b>\(^\dagger\), Qing Qu. Understanding Representation Dynamics of Diffusion Models via Low-Dimensional Modeling, 2025. Under review in <b>NeurIPS 2025</b>. [<a href="https://arxiv.org/pdf/2502.05743" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
 </p>
 </li>
 <li><p>Alec S Xu, Can Yaras, <b>Peng Wang</b>, Qing Qu. Understanding How Nonlinear Layers Create Linearly Separable Features for Low-Dimensional Data, 2025. Under review in <b>SIAM Journal on Mathematics of Data Science</b>. [<a href="https://arxiv.org/pdf/2501.02364" target=&ldquo;blank&rdquo;><b>paper</b></a>]
@@ -158,7 +158,7 @@ Postdoc Research Fellow <br />
 </ul>
 <h2>Conference Papers</h2>
 <ul>
-<li><p><b>Peng Wang</b>, Yifu Lu, Yaodong Yu, Druv Pai, Qing Qu, Yi Ma. Attention-Only Transformers via Unrolled Subspace Denoising. Accepted by <b><i>ICML 2025</i></b>. 
+<li><p><b>Peng Wang</b>, Yifu Lu, Yaodong Yu, Druv Pai, Qing Qu, Yi Ma. Attention-Only Transformers via Unrolled Subspace Denoising. Accepted by <b><i>ICML 2025</i></b>. [<a href="https://arxiv.org/pdf/2506.03790" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
 <li><p>Can Yaras*, Siyi Chen*, Peng Wang, Qing Qu. Explaining and Mitigating the Modality Gap in Contrastive Multimodal Learning. <b><i>CAPL 2025</i></b>. [<a href="https://arxiv.org/pdf/2412.07909" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
@@ -216,7 +216,7 @@ Diffusion Models. <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-05-03 08:34:49 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-06-05 09:25:39 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
