--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@ Postdoc Research Fellow <br />
 </p>
 <h2>What's New</h2>
 <ul>
+<li><p>[June 2025] <a href="https://arxiv.org/abs/2506.20344" target=&ldquo;blank&rdquo;><b>One paper</b></a> on the global loss landscape analyais of deep matrix factorization is posted! 
+</p>
+</li>
 <li><p>[May 2025] <a href="https://arxiv.org/pdf/2506.03790" target=&ldquo;blank&rdquo;><b>Our paper</b></a> on understanding the mechenism of transformers has been accepted by <b>ICML 2025</b>! 
 </p>
 </li>
@@ -64,7 +67,7 @@ Postdoc Research Fellow <br />
 <li><p>[Mar 2025] I will attend the <a href="https://cpal.cc/" target=&ldquo;blank&rdquo;><b>Conference on Parsimony and Learning</b></a> at Stanford University from March 24-27! 
 </p>
 </li>
-<li><p>[Feb 2025] <a href="https://arxiv.org/abs/2502.11152" target=&ldquo;blank&rdquo;><b>One paper</b></a> on the local loss landscape of deep linear networks is posted! 
+<li><p>[Feb 2025] <a href="https://arxiv.org/abs/2502.11152" target=&ldquo;blank&rdquo;><b>One paper</b></a> on the local error bound of deep linear networks is posted! 
 </p>
 </li>
 <li><p>[Jan 2025] <a href="https://arxiv.org/pdf/2502.05743" target=&ldquo;blank&rdquo;><b>One paper</b></a> on the representation capabilities of diffusion models is posted! 
@@ -115,6 +118,9 @@ Postdoc Research Fellow <br />
 </ul>
 <h2>Preprints (&lsquo;&lsquo;*&rsquo;&rsquo; denotes equal contribution, &lsquo;&lsquo;\(\dagger\)&rsquo;&rsquo; denotes corresponding author.)</h2>
 <ul>
+<li><p>(<font color=red size=+0.5><b>\(\alpha\)-\(\beta\) order</b></font>) Po Chen, Rujun Jiang, <b>Peng Wang</b>\(^\dagger\). A Complete Loss Landscape Analysis of Regularized Deep Matrix Factorization, 2025. [<a href="https://arxiv.org/pdf/2506.20344" target=&ldquo;blank&rdquo;><b>paper</b></a>]
+</p>
+</li>
 <li><p>(<font color=red size=+0.5><b>\(\alpha\)-\(\beta\) order</b></font>) Laura Balzano\(^\dagger\), Tianjiao Ding\(^\dagger\), Benjamin D. Haeffele, Soo Min Kwon, Qing Qu, <b>Peng Wang</b>\(^\dagger\), Zhangyang Wang, Can Yaras. An Overview of Low-Rank Structures in the Training and Adaptation of Large Models. Under review in <b><i>IEEE Signal Processing Magazine</i></b>, 2025. [<a href="https://arxiv.org/pdf/2503.19859" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
@@ -216,7 +222,7 @@ Diffusion Models. <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-06-05 23:46:54 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-06-26 09:39:41 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
